--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Get the latest code
         uses: actions/checkout@v2.3.2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
       - uses: actions/setup-node@master
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
@@ -27,4 +30,4 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /htdocs/pcs
+          server-dir: /htdocs/pcs/
